# MYMCP

./: CHANGELOG.md  README.md  pyproject.toml
src/mymcp/: __init__.py  data_type.py  proxy.py
src/mymcp/client/: __init__.py  client.py  player.py
src/mymcp/data_types/: entity.py
src/mymcp/packets/: v769.py
src/mymcp/protocols/: __init__.py  configuration.py  handshake.py  login.py  play.py  status.py
