[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mymcp"
version = "0.1.2"
authors = [
    {name = "Me2sY", email = "me2sy@outlook.com"}
]
description = "Encode and decode the protocols of Minecraft (Java Edition) version 1.21.4 in Python. With a demo proxy server and a demo client/player."
readme = "README.md"
requires-python = ">= 3.12"
keywords = ["Minecraft", "Protocols", "Game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Games/Entertainment"
]

dependencies = [
    "loguru",
    "pynbt",
    "numpy", "pandas",

    # For Proxy / Client
    "twisted"
]

[project.urls]
Homepage = "https://github.com/me2sy/MYMCP"
Issues = "https://github.com/me2sy/MYMCP/issues"